Framwork card, scrollbar color, Github component hover bugfix

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: black;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 10px;
 }
 
